added race generator

--- a/PCG_Character/PCG_Character.vcxproj.filters
+++ b/PCG_Character/PCG_Character.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MarkovChain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MarkovChain.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
