--- a/PCG_Character/PCG_Character.vcxproj
+++ b/PCG_Character/PCG_Character.vcxproj
@@ -153,9 +153,11 @@
   <ItemGroup>
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MarkovChain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Character.h" />
+    <ClInclude Include="MarkovChain.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
