fixed memory leaks
start dissertation

gantt chart

--- a/PCG_Character/PCG_Character.vcxproj
+++ b/PCG_Character/PCG_Character.vcxproj
@@ -151,11 +151,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Algorithms.cpp" />
     <ClCompile Include="Character.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MarkovChain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Algorithms.h" />
     <ClInclude Include="Character.h" />
     <ClInclude Include="MarkovChain.h" />
   </ItemGroup>
